force-app/src/objects/OrderApi__Shipping_Method__c.object
<CustomObject>
    <description>The delivery method that the carrier provides to ship item.</description>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Description for Delivery Method.</description>
        <inlineHelpText>Description for Delivery Method.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Name__c</fullName>
        <description>Display Name For Delivery Method.</description>
        <inlineHelpText>Display Name For Delivery Method.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The default delivery method for shipping an item.</description>
        <inlineHelpText>Select the checkbox to make this the Default Delivery Method.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Carrier_Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the related Shipping Carrier.</description>
        <inlineHelpText>Identifies the related Shipping Carrier.</inlineHelpText>
        <label>Shipping Carrier</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Delivery Methods</relationshipLabel>
        <relationshipName>Delivery_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Delivery Method</label>
    <nameField>
        <label>Delivery Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>